<resources>
    <string name="app_name">apoyogrupo</string>

    <string name="num1">Ingrese numero 1</string>
    <string name="num2">Ingrese numero 2</string>
    <string name="resultado">Resultado</string>

    <string name="suma">Sumar</string>
    <string name="resta">Restar</string>
    <string name="multiplica">Multiplicar</string>
    <string name="divide">Dividir</string>
    <string name="convierte">Convertir</string>

    <string name="txtConvertido">Resultado convertido</string>
    <string name="volver">Volver</string>
</resources>